# proc-macro-sample

./: .gitignore  Cargo.toml  LICENSE  README.md
load-dump-derive/: Cargo.toml
load-dump-derive/src/: attrs.rs  dump.rs  lib.rs  load.rs
src/: err.rs  ext_io.rs  lib.rs  tests.rs
